[package]
name = "sarge"
version = "0.1.0"
authors = ["Deep Majumder <deep.majumder2019@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
log = "0.4"
syslog = "5.0.0"
notify-rust = "4.0.0"
